// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfigUtil > Should always include ModSync.Updater.exe in syncPaths 1`] = `
[
  {
    "enabled": true,
    "enforced": true,
    "path": "ModSync.Updater.exe",
    "restartRequired": false,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": true,
    "path": "BepInEx/plugins/Corter-ModSync.dll",
    "restartRequired": true,
    "silent": true,
  },
]
`;

exports[`ConfigUtil > should load config 1`] = `
[
  {
    "enabled": true,
    "enforced": true,
    "path": "ModSync.Updater.exe",
    "restartRequired": false,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": true,
    "path": "BepInEx/plugins/Corter-ModSync.dll",
    "restartRequired": true,
    "silent": true,
  },
  {
    "enabled": true,
    "enforced": false,
    "path": "doesnotexist",
    "restartRequired": true,
    "silent": false,
  },
  {
    "enabled": true,
    "enforced": false,
    "path": "plugins",
    "restartRequired": true,
    "silent": false,
  },
  {
    "enabled": false,
    "enforced": false,
    "path": "mods",
    "restartRequired": true,
    "silent": false,
  },
]
`;

exports[`ConfigUtil > should reject absolute paths 1`] = `[Error: Corter-ModSync: SyncPaths must be relative to SPT server root. Invalid path '/etc/shadow']`;

exports[`ConfigUtil > should reject invalid JSON 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject non-array syncPaths 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject on non-array exclusions 1`] = `[Error: Corter-ModSync: config.jsonc 'exclusions' is not an array. Please verify your config is correct and try again.]`;

exports[`ConfigUtil > should reject paths outside of SPT root 1`] = `[Error: Corter-ModSync: SyncPaths must within SPT server root. Invalid path '../../etc/shadow']`;

exports[`ConfigUtil > should reject syncPath object without path 1`] = `[Error: Corter-ModSync: config.jsonc 'syncPaths' is missing 'path'. Please verify your config is correct and try again.]`;
